Rename rsa -> mne_rsa

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 verbosity = 2
 detailed-errors = 1
 with-coverage = 1
-cover-package = rsa
+cover-package = mne_rsa
 
 [flake8]
 exclude = __init__.py
