--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
               echo "set -e" >> $BASH_ENV
               echo "export DISPLAY=:99" >> $BASH_ENV
               echo "export OPENBLAS_NUM_THREADS=4" >> $BASH_ENV
+              echo "export MNE_3D_BACKEND=pyvista" >> $BASH_ENV
+              echo "export _MNE_BRAIN_TRACES_AUTO=false" >> $BASH_ENV
               echo "BASH_ENV:"
               cat $BASH_ENV
         - run:
@@ -33,15 +35,38 @@ jobs:
               - pip-cache
 
         - run:
+            name: Install 3D rendering libraries
+            command: |
+                sudo apt-get install libosmesa6 libglx-mesa0 libopengl0 libglx0 libdbus-1-3
+
+        - run:
             name: Spin up Xvfb
             command: |
               /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset;
+
+        # https://github.com/ContinuumIO/anaconda-issues/issues/9190#issuecomment-386508136
+        # https://github.com/golemfactory/golem/issues/1019
+        - run:
+            name: Install PyQt5 dependencies
+            command: |
+              sudo apt-get install libxkbcommon-x11-0
+
+        - run:
+            name: Install pandoc
+            command: |
+                sudo apt-get install -y pandoc
+
         - run:
             name: Get Python running
             command: |
-              python -m pip install --user --upgrade --progress-bar off pip
+              python -m pip install --user --upgrade --progress-bar off pip numpy setuptools
+              python -m pip install --user --upgrade --progress-bar off "vtk>=9.0.0rc3" -f https://vtk.org/download/
+              python -m pip install --user --upgrade --progress-bar off https://github.com/larsoner/mayavi/zipball/vtk9
               python -m pip install --user --upgrade --progress-bar off -r requirements.txt
-              python -m pip install --user --upgrade --progress-bar off -r doc/requirements.txt
+              python -m pip uninstall -yq pysurfer mayavi
+              python -m pip install --user --upgrade --progress-bar off --pre sphinx
+              python -m pip install --user --upgrade --progress-bar off ipython sphinx_fontawesome sphinx_bootstrap_theme memory_profiler "https://github.com/sphinx-gallery/sphinx-gallery/archive/master.zip"
+              python -m pip install --user --upgrade seaborn
               python -m pip install --user -e .
         - save_cache:
             key: pip-cache
@@ -53,12 +78,15 @@ jobs:
             name: Check installation
             command: |
                which python
+               QT_DEBUG_PLUGINS=1 mne sys_info
+               python -c "import numpy; numpy.show_config()"
+               LIBGL_DEBUG=verbose python -c "import pyvista; pyvista.BackgroundPlotter(show=True)"
                python -c "import mne_rsa"
-        # Install pandoc
-        - run:
-            name: Install pandoc
-            command: |
-                sudo apt-get install -y pandoc
+
+        # Download example data
+        python -c "import mne; mne.datasets.sample.data_path(download=True)"
+        python -c "import mne; mne.datasets.kiloword.data_path(download=True)"
+
         # Build docs
         - run:
             name: make html
