--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -17,13 +17,14 @@ jobs:
 
       steps:
         - uses: actions/checkout@v2
+          
         - name: Set up Python 3.8
-            uses: actions/setup-python@v2
-            with: python-version: 3.8
+          uses: actions/setup-python@v2
+          with:
+            python-version: 3.8
 
-        - run:
-            name: Merge with upstream
-            command: |
+        - name: Merge with upstream
+          run: |
               echo $(git log -1 --pretty=%B) | tee gitlog.txt
               echo ${CI_PULL_REQUEST//*pull\//} | tee merge.txt
               if [[ $(cat merge.txt) != "" ]]; then
@@ -33,21 +34,18 @@ jobs:
                 git fetch upstream master;
               fi
 
-        - run:
-            name: Install 3D rendering libraries
-            command: |
+        - name: Install 3D rendering libraries
+            run: |
                 sudo apt-get install libosmesa6 libglx-mesa0 libopengl0 libglx0 libdbus-1-3
 
-        - run:
-            name: Spin up Xvfb
-            command: |
+        - name: Spin up Xvfb
+            run: |
               /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1400x900x24 -ac +extension GLX +render -noreset;
 
         # https://github.com/ContinuumIO/anaconda-issues/issues/9190#issuecomment-386508136
         # https://github.com/golemfactory/golem/issues/1019
-        - run:
-            name: Install PyQt5 dependencies
-            command: |
+        - name: Install PyQt5 dependencies
+            run: |
               sudo apt-get install libxkbcommon-x11-0
 
         - name: Cache Pip
@@ -57,10 +55,9 @@ jobs:
             path: ~/.cache/pip
             key: pip-cache
 
-        - run:
-            name: Install Python dependencies
+        - name: Install Python dependencies
             if: steps.cache-pip.outputs.cache-hit != 'true'
-            command: |
+            run: |
               python -m pip install --user --upgrade --progress-bar off pip numpy setuptools
               python -m pip install --user --upgrade --progress-bar off -f "https://vtk.org/download" "vtk>=9"
               python -m pip install --user --upgrade --progress-bar off https://github.com/enthought/mayavi/zipball/master
@@ -71,25 +68,22 @@ jobs:
               python -m pip install --user -e .
 
         # Look at what we have and fail early if there is some library conflict
-        - run:
-            name: Check installation
-            command: |
+        - name: Check installation
+            run: |
               which python
               QT_DEBUG_PLUGINS=1 mne sys_info
               python -c "import numpy; numpy.show_config()"
               LIBGL_DEBUG=verbose python -c "import pyvista; pyvista.BackgroundPlotter(show=True)"
               python -c "import mne_rsa"
 
-        - run:
-            name: Download example data
-            command: |
+        - name: Download example data
+            run: |
               python -c "import mne; mne.datasets.sample.data_path(download=True)"
               python -c "import mne; mne.datasets.kiloword.data_path(download=True)"
 
         # Build docs
-        - run:
-            name: make html
-            command: |
+        - name: make html
+            run: |
               cd doc;
               make html;
 
