--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -71,9 +71,8 @@ jobs:
         - name: Check installation
           run: |
             which python
-            QT_DEBUG_PLUGINS=1 mne sys_info
+            python -c "import mne; mne.sys_info()"
             python -c "import numpy; numpy.show_config()"
-            LIBGL_DEBUG=verbose python -c "import pyvista; pyvista.BackgroundPlotter(show=True)"
             python -c "import mne_rsa"
 
         - name: Download example data
