--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest tqdm pytest-cov
         pip install -r requirements.txt
     - name: Lint with flake8
       run: |
@@ -34,4 +34,4 @@ jobs:
     - name: Test with pytest
       run: |
         python setup.py develop --user
-        pytest
+        pytest --cov-report term-missing --cov mne_rsa
