--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 addopts =
     --showlocals --durations=20 --doctest-modules -ra --cov-report=
     --doctest-ignore-import-errors --junit-xml=junit-results.xml
-    --ignore=doc --ignore=examples --ignore=tutorials
+    --ignore=doc --ignore=examples --ignore=tutorials --cov=mne_rsa
 junit_family = xunit2
 
 [flake8]
