--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -3,7 +3,6 @@ scipy
 mne
 scikit-learn
 vtk>=9
-pyvista
 mayavi
 pysurfer
 sphinx_gallery
@@ -13,3 +12,4 @@ matplotlib
 pyqt5
 tqdm
 nilearn
+pillow
