--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,10 @@
-[nosetests]
-verbosity = 2
-detailed-errors = 1
-with-coverage = 1
-cover-package = mne_rsa
+[tool:pytest]
+addopts =
+    --showlocals --durations=20 --doctest-modules -ra --cov-report=
+    --doctest-ignore-import-errors --junit-xml=junit-results.xml
+    --ignore=doc --ignore=examples --ignore=tutorials --cov=mne_rsa
+junit_family = xunit2
 
 [flake8]
 exclude = __init__.py
-ignore = E241
+ignore = W503
