--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -36,6 +36,7 @@ jobs:
 
         - name: Install 3D rendering libraries
           run: |
+            sudo apt-get update
             sudo apt-get install libosmesa6 libglx-mesa0 libopengl0 libglx0 libdbus-1-3
 
         - name: Spin up Xvfb
