--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [tool:pytest]
 addopts =
-    --showlocals --durations=20 --doctest-modules -ra --cov-report=
+    --showlocals --durations=20 --doctest-modules -ra --cov-report=term-missing
     --doctest-ignore-import-errors --junit-xml=junit-results.xml
     --ignore=doc --ignore=examples --ignore=tutorials --cov=mne_rsa
 junit_family = xunit2
