--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ authors = [
     {name = "Marijn van Vliet", email = "w.m.vanvliet@gmail.com"},
 ]
 description = "Code for performing Representational Similarity Analysis on MNE-Python data structures."
-readme = "README.rst"
 requires-python = ">=3.7"
 keywords = ["rsa", "meg", "eeg", "neuroimaging", "mne-python"]
 license = {text = "BSD-3-Clause"}
@@ -24,7 +23,31 @@ classifiers = [
 	"Operating System :: Unix",
 	"Operating System :: MacOS",
 ]
+dependencies = ["mne"]
 dynamic = ["version"]
+
+[tool.setuptools]
+packages = ["mne_rsa"]
 
 [tool.setuptools.dynamic]
 version = {attr = "mne_rsa.__version__"}
+readme = {file = ["README.rst"]}
+
+[tool.pytest.ini_options]
+addopts = """
+    --showlocals --durations=20 --doctest-modules -ra --cov-report=term-missing
+    --doctest-ignore-import-errors --junit-xml=junit-results.xml
+    --ignore=doc --ignore=examples --ignore=tutorials --cov=mne_rsa
+"""
+junit_family = "xunit2"
+
+[tool.ruff]
+exclude = ["__init__.py"]
+line-length = 88
+indent-width = 4
+
+[tool.ruff.lint]
+ignore = ["W503"]
+
+[tool.ruff.format]
+quote-style = "double"
