--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -37,7 +37,7 @@ jobs:
         - name: Install 3D rendering libraries
           run: |
             sudo apt-get update
-            sudo apt-get install libosmesa6 libglx-mesa0 libopengl0 libglx0 libdbus-1-3
+            sudo apt-get install libosmesa6 libglx-mesa0 libopengl0 libglx0 libdbus-1-3 
 
         - name: Spin up Xvfb
           run: |
@@ -45,7 +45,7 @@ jobs:
 
         - name: Install PyQt6 dependencies
           run: |
-            sudo apt-get install qt6-base-dev libx11-xcb-dev
+            sudo apt-get install qt6-base-dev libx11-xcb-dev libxcb-cursor0
 
         - name: Cache Pip
           id: cache-pip
