Add project URLs to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,11 @@ classifiers = [
 dependencies = ["mne"]
 dynamic = ["version"]
 
+[project.urls]
+"Homepage" = "https://users.aalto.fi/~vanvlm1/mne-rsa"
+"Bug Tracker" = "https://github.com/wmvanvliet/mne-rsa/issues/"
+"Source Code" = "https://github.com/wmvanvliet/mne-rsa"
+
 [tool.setuptools]
 packages = ["mne_rsa"]
 
